--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.2.2'
 	id 'io.spring.dependency-management' version '1.1.4'
+	id "io.freefair.lombok" version "6.5.1"
+	id 'org.liquibase.gradle' version '2.2.0'
 }
 
 group = 'ru.clevertec'
@@ -15,9 +17,53 @@ repositories {
 	mavenCentral()
 }
 
+ext {
+	junitVersion = '5.9.2'
+	mockitoVersion = '5.6.0'
+	mapstructVersion = "1.5.5.Final"
+}
+
 dependencies {
+	//Spring
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+	//DataBase
+	runtimeOnly 'org.postgresql:postgresql'
+
+	//Mapping
+	implementation "org.mapstruct:mapstruct:${mapstructVersion}"
+	annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
+	testAnnotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
+
+	//Lombok
+	annotationProcessor "org.projectlombok:lombok-mapstruct-binding:0.2.0"
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
+
+	//Logging
+	implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.20.0'
+
+	//Liquibase
+	implementation group: 'org.liquibase', name: 'liquibase-core', version: '4.25.0'
+
+	//Testing
+	testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: '5.10.0'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test:3.2.1'
+	testImplementation 'org.testcontainers:postgresql:1.19.3'
+	testImplementation 'org.testcontainers:testcontainers'
+	testImplementation 'org.testcontainers:junit-jupiter:1.19.3'
+
+	//Swagger
+	implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.0.3'
+
+	//Cache
+	implementation project(':cache-spring-boot-starter')
+
+
 }
 
 tasks.named('test') {
